Update busqueda de vehiculo Add metodo Rentar incompleto

--- a/WebApplication3/Views/Access/Index.cshtml
+++ b/WebApplication3/Views/Access/Index.cshtml
@@ -7,16 +7,15 @@
 <div class="row">
     <form id="frm">
         <div>
-            Usuario
+            <b>Usuario</b>
             <br />
-            <input type="text" name="user">
+            <input type="text" name="user" class="form-control">
             <br />
-            Contraseña
+            <b>Contraseña</b>
             <br />
-            <input type="password" name="password">
+            <input type="password" name="password" class="form-control">
             <br />
-            <br />
-            <input type="submit" class="btn-default" value="Entrar">
+            <input type="submit" class="btn btn-success" value="Entrar" >
 
         </div>
         </form>
