--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Vehiculos", "ViewVehicles", "Vehicle")</li>
+                    <li>@Html.ActionLink("Rentar", "RentView", "Rent")</li>
                     <li>@Html.ActionLink("Cerrar sesion", "Logoff", "Logoff")</li>
                 </ul>
             </div>
