--- a/WebApplication3/Views/User/Userview.cshtml
+++ b/WebApplication3/Views/User/Userview.cshtml
@@ -26,7 +26,7 @@
                 @Html.PasswordFor(d => d.ConfirmPassword, new { @class = "form-control" })
                 @Html.ValidationMessage("ConfirmPassword", new { @class = "text-danger" })<br/>
 
-                <input type="submit" class="=" btn btn-success" value="Guardar">
+                <input type="submit" class="" btn btn-success" value="Guardar">
             }
 
 
