update vista login add admin section add rentar logic (no funciona)

--- a/WebApplication3/Content/Site.css
+++ b/WebApplication3/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
