--- a/WebApplication3/Views/Admin/Index.cshtml
+++ b/WebApplication3/Views/Admin/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_layout2.cshtml";
+    Layout = "~/Views/Shared/_Layout3.cshtml";
 }
 
 <div class="modal-dialog text-center">
-    
+
     <div class="col-sm-10 main-section">
         <div class="modal-content">
             <div class="col-12 user-img">
-                <img src="~/Content/Images/User-Avatar-Profile-Clip-Art-Transparent-PNG.png" style=" width: 50%; display: block; margin-left: auto; margin-right: auto;" />
+                <img src="~/Content/Images/User_icon_BLACK-01.png" style=" width: 30%; display: block; margin-left: auto; margin-right: auto;" />
             </div>
-            <form class="col-12" id="frm">
+            <form class="col-12" id="frm2">
                 <div class="form-group my-2 mx-4" id="user-group">
                     <input type="text" class="form-control" placeholder="Nombre de usuario" name="user" />
                 </div>
@@ -28,15 +28,15 @@
 @section scripts{
     <script>
     $(document).ready(function () {
-        $("#frm").submit(function (e) {
+        $("#frm2").submit(function (e) {
             e.preventDefault();
 
-            url = "@Url.Content("~/Access/Enter")"
+            url = "@Url.Content("~/Admin/Enter")"
             parametros = $(this).serialize();
 
             $.post(url, parametros, function (data) {
                 if (data == 1) {
-                    document.location.href = "@Url.Content("~/")";
+                    document.location.href = "@Url.Content("~/Admin/AdminView")";
                 }
                 else
                 {
@@ -47,3 +47,4 @@
     })
     </script>
 }
+
