--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -3,8 +3,10 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p>Dios mio matenme</p>
-</div>
+<section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
+    <h1 class="p-3 fs-2 border-top border-3">Una agencia única para todas tus necesidades de <span class="text-primary">Marketing Digital<span /></h1>
+    <p class="p-3  fs-4">
+        <span class="text-primary">RentAcarrito</span> es la agencia donde te alquilamos un carrito bacanito
+    </p>
+</section>
 
